address first batch of Jon's comments

--- a/packet/ans/probability.tex
+++ b/packet/ans/probability.tex
@@ -147,14 +147,14 @@
 \begin{answer}
     \renewcommand{\labelenumi}{(\alph{enumi})}
     \begin{enumerate}
-        \item \textbf{indistinguishable:} 
+        \item \textbf{perfectly indistinguishable:} 
         both $\left\{\frac{1}{2},\frac{1}{2}\right\}$
-        \item \textbf{not indistinguishable:}
+        \item \textbf{not perfectly indistinguishable:}
         the uniform distribution with all probabilities equal to 
         $\frac{1}{52}$ is not the same as the uniform distribution 
         with all probabilities $\frac{1}{6}\left(\frac{1}{2}\right)^3 
         = \frac{1}{48}$.
-        \item \textbf{indistinguishable:}
+        \item \textbf{perfectly indistinguishable:}
         $\left\{\frac{1}{4},3\left(\frac{1}{4}\right)\right\} 
         = \left\{\frac{13}{52},\frac{39}{52}\right\} 
         = \left\{\frac{1}{4},\frac{3}{4}\right\}$
