--- a/packet/src/header.tex
+++ b/packet/src/header.tex
@@ -42,8 +42,8 @@
 %comments
 \newcommand{\nsm}[1]{\textcolor{teal}{(NG: #1)}}
 \newcommand{\new}[1]{\textcolor{blue}{#1}}
-% \newcommand{\todo}[1]{\textcolor{red}{#1}}
-\newcommand{\todo}[1]{#1}
+\newcommand{\todo}[1]{\textcolor{red}{#1}}
+% \newcommand{\todo}[1]{#1}
 
 \renewcommand\abstractname{Introduction}
 
