--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -16,7 +16,7 @@ see an example.
 
 \subsection{A simple secret sharing}
 
-Here is a simple scheme for sharing integers using nothing but addition and subtraction:
+Here is a simple scheme for sharing integers using nothing but addition and subtraction.
 
 \def\share{\ensuremath{\mathsf{Share}}}
 \def\rec{\ensuremath{\mathsf{Rec}}}
@@ -59,6 +59,9 @@ If $\rec$ receives two shares that were produced by the $\share$ algorithm,
 it will return $s_1 + (s-s_1) = s$. This means the scheme has correctness!
 What about privacy? 
 
+\todo{for values $s$ in $\{1, \ldots, 2^\lambda\}$. Let's define the subtraction 
+as wrapping around (if $s_1 > s$, $s-s_1 = 2^\lambda - (s_1-s)$), i.e. 
+work modulo $2^\lambda$.}
 It turns out the scheme is private as well: someone who sees only one of the two 
 shares learns nothing about the secret. This is pretty straightforward if the 
 one share you see is $s_1$: we picked this value randomly (remember this means 
@@ -292,6 +295,8 @@ Now that we understand correctness, let's look at privacy.
 
 \subsubsection{Privacy}
 
+\todo{covers only 1 corrupted party; change this to cover up to $n-1$ 
+corruptions.}
 In cryptography, security properties like privacy are defined using what 
 are called ``games''. A game is a challenge in which an attacker (called 
 the \emph{adversary} and usually denoted by the curly letter $\mathcal{A}$) is given 
@@ -417,7 +422,7 @@ be able to win:
     \footnotetext{In cryptography, this usually means bounded by a \emph{negligible} 
     function. For the purposes of this packet, ``small'' means very close to 0, 
     for example $\frac{1}{2^\lambda}$, which for $\lambda=10$ is $\frac{1}{1024}$. 
-    Since the advantage ranges from 0 to $\frac{1}{2}$, a value like $\frac{1}{4}$ 
+    Since this quantity ranges from 0 to $\frac{1}{2}$, a value like $\frac{1}{4}$ 
     or $\frac{1}{8}$ is not small.}
 \end{definition}
 
@@ -495,11 +500,13 @@ can arise. There are examples of cryptographers publishing papers
 introducing new, ``secure'' schemes that end up being broken. And yet 
 these schemes had proofs of security! Especially for complicated schemes, 
 it sometimes turns out that the authors didn't think of the most clever 
-adversary to attack the scheme. In other cases, they might assume that 
+adversary to attack the scheme, \new{so the proof is incorrect}. In other cases, they might assume that 
 something is hard to do, so even if a clever adversary realizes that this 
 is the best way to break the scheme it won't be able to pull off this 
 kind of attack --- but then someone discovers a way to solve that 
-hard problem. (For example, RSA cryptography, introduced in 1977\cite{rsa},
+hard problem. \new{This means the proof is correct, but it rests on an 
+incorrect assumption, so its conclusion doesn't hold in the real world.} 
+(For example, RSA cryptography, introduced in 1977\cite{rsa},
 is based on the difficulty of factoring integers. But in 1994, Peter Shor 
 discovered a fast way to factor integers\cite{shor} --- if you have a 
 quantum computer. If you're interested in how RSA cryptography works, 
@@ -560,7 +567,7 @@ scheme as an example.
 
     If $i=1$, then $s_{0,1}$ and $s_{1,1}$ are distributed uniformly 
     at random by the definition of \share~(the first share is 
-    a uniformly random value). Thus, they are indistinguishable,
+    a uniformly random value). Thus, they are perfectly indistinguishable,
     and any adversary $\A$ can only randomly guess the value of $b$.
     So
     \[
@@ -570,7 +577,7 @@ scheme as an example.
     If $i=2$, then $s_{0,2} = s-s_{0,1}$ and $s_{1,2} = s-s_{1,1}$.
     But as we said before, $s_{0,1}$ and $s_{1,1}$ are uniform,
     which implies that $s_{0,2}$ and $s_{1,2}$ are also uniform.
-    Therefore they are indistinguishable, and 
+    Therefore they are perfectly indistinguishable, and 
     \[
         \Pr[b=b' \mid i=2] = \frac{1}{2}.
     \]
