--- a/packet/ans/shamir.tex
+++ b/packet/ans/shamir.tex
@@ -53,6 +53,30 @@
 \end{answer}
 
 \begin{answer}
+    \renewcommand{\labelenumi}{(\alph{enumi})}
+    \begin{enumerate}
+        \item $x_0 = 0$:
+        \begin{align*}
+            \ell_0(0) &= \frac{(0-1)(0-4)}{4} = \frac{(-1)(-4)}{4} &= 1\\
+            \ell_1(0) &= \frac{0(0-4)}{-3} = \frac{0(-4)}{-3} &= 0\\
+            \ell_2(0) &= \frac{0(0-1)}{12} = \frac{0(-1)}{12} &= 0
+        \end{align*}
+        \item $x_1 = 1$:
+        \begin{align*}
+            \ell_0(1) &= \frac{(1-1)(1-4)}{4} = \frac{(0)(-3)}{4} &= 0\\
+            \ell_1(1) &= \frac{1(1-4)}{-3} = \frac{1(-3)}{-3} &= 1\\
+            \ell_2(1) &= \frac{1(1-1)}{12} = \frac{1(0)}{12} &= 0
+        \end{align*}
+        \item $x_2 = 4$:
+        \begin{align*}
+            \ell_0(4) &= \frac{(4-1)(4-4)}{4} = \frac{(3)(0)}{4} &= 0\\
+            \ell_1(4) &= \frac{4(4-4)}{-3} = \frac{4(0)}{-3} &= 0\\
+            \ell_2(4) &= \frac{4(4-1)}{12} = \frac{4(3)}{12} &= 1
+        \end{align*}
+    \end{enumerate}
+\end{answer}
+
+\begin{answer}
     $3x^2 + 7x - 12$
 \end{answer}
 
