finish addressing Jon's comments

--- a/packet/ans/secretsharing.tex
+++ b/packet/ans/secretsharing.tex
@@ -6,21 +6,23 @@
     randomness $s_1$ that's used. 
     
     An example application of \share~with $s=42$ follows. First, $s_1$ is 
-    chosen at random. Say $s_1=18$. Then \share~outputs $(18,42-18)=(18,24)$.
+    chosen at random. Say $s_1=18$. Then \share~outputs $(18,42-18 \mod 1024)
+    =(18,24 \mod 1024) = \textbf{(18,24)}$.
 
     $s_1$ could also be larger than $s$, e.g. $s_1 = 321$. In this case, 
-    \share~outputs $(321,42-321)=(42,-279)$.
+    \share~outputs $(321,42-321 \mod 1024)=(321,-279 \mod 1024) = (321,
+    1024-279) = \textbf{(321,745)}$.
 \end{sampleA}
 
 \begin{answer}
-    Reconstruction simply adds the shares together:
+    Reconstruction simply adds the shares together (reducing modulo 1024):
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
-        \item $2+6=8$
-        \item $4+1=5$
-        \item $10+2=12$
-        \item $115+(-103)=12$
-        \item $559+(-544)=15$
+        \item $2+6 \mod 1024 =8 \mod 1024 = \textbf{8}$
+        \item $4+1 \mod 1024 =5 \mod 1024 = \textbf{5}$
+        \item $10+2 \mod 1024=12 \mod 1024 = \textbf{12}$
+        \item $115+921 \mod 1024=1036 \mod 1024=1036-1024=\textbf{12}$
+        \item $559+480 \mod 1024=1039 \mod 1024=1039-1024=\textbf{15}$
     \end{enumerate}
 \end{answer}
 
@@ -28,13 +30,13 @@
     \begin{pchstack}[center]
     \fbox{%
     \procedure{$\share(s)$}{%
-        s_1, s_2 \sample \{1, \ldots, 2^\lambda\} \\
-        s_3 = s - (s_1+s_2)\\
+        s_1, s_2 \sample \{0, \ldots, 2^\lambda-1\} \\
+        s_3 = s - (s_1+s_2) \mod 2^\lambda\\
         \textsf{return}~ (s_1, s_2, s_3)
     }
     \pchspace
     \procedure{$\rec(s_1, s_2, s_3)$}{%
-        \textsf{return}~ s_1 + s_2 + s_3
+        \textsf{return}~ s_1 + s_2 + s_3 \mod 2^\lambda
     }
     }
     \end{pchstack}
@@ -45,12 +47,12 @@
     \fbox{%
     \procedure{$\share(s)$}{%
         s_1, \ldots, s_{n-1} \sample \{1, \ldots, 2^\lambda\} \\
-        s_n = s - (s_1+\ldots+s_{n-1})\\
+        s_n = s - (s_1+\ldots+s_{n-1}) \mod 2^\lambda\\
         \textsf{return}~ (s_1, \ldots, s_n)
     }
     \pchspace
     \procedure{$\rec(s_1, \ldots, s_n)$}{%
-        \textsf{return}~ s_1 + \ldots + s_n
+        \textsf{return}~ s_1 + \ldots + s_n \mod 2^\lambda
     }
     }
     \end{pchstack}
