--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -25,12 +25,14 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 \begin{pchstack}[center]
 \fbox{%
 \procedure{$\share(s)$}{%
-    s_1 \sample \{1, \ldots, 2^\lambda\} \\
-    \pcreturn (s_1, s - s_1)
+    % \pccomment{where $s \in \{0, \ldots, 2^\lambda\}$ }\\
+    s_1 \sample \new{\{0, \ldots, 2^\lambda-1\}} \\
+    s_2 \gets s-s_1 \mod{2^\lambda}\\
+    \pcreturn (s_1, s_2)
 }
 \pchspace
 \procedure{$\rec(s_1, s_2)$}{%
-    \pcreturn s_1 + s_2
+    \pcreturn s_1 + s_2 \mod{2^\lambda}
 }
 }
 \end{pchstack}
@@ -38,39 +40,97 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 \label{fig:additiveSS}
 \end{figure}
 
+\todo{In a future iteration, maybe introduce the na\"ive scheme (without 
+modulus) and point out the issues to slowly adjust the scheme.}
+
 Let's go through the notation together. First, on the left, we see that 
 the $\share$ algorithm is being defined. (An \emph{algorithm} is simply a procedure.)
 The parentheses after the name tell us that it takes an input $s$, which in 
 this context is the secret to be shared. The first line tells us to sample\footnotemark~
-an element from the set $\{1, \ldots, 2^\lambda\}$ and call it $s_1$. The 
+an element from the set $\{0, \ldots, 2^\lambda-1\}$ and call it $s_1$. The 
 dots in the set are shorthand for all the numbers in between. For instance, 
-when $\lambda=10$, we sample $s_1$ uniformly from the set $\{1, 2, 3, 4, \ldots, 
-1022,1023, 1024\}$. Now we're almost done! The next line says to return 
-(output) a pair of numbers: the random number $s_1$ and the difference $s-s_1$.
+when $\lambda=10$, we sample $s_1$ uniformly from the set $\{0, 1, 2, 3, \ldots, 
+1021, 1022, 1023\}$. \new{The value of $\lambda$ would be chosen beforehand by 
+the person or people running \share~and \rec.}
 \footnotetext{We introduced the symbol $\sample$ in Section~\ref{sec:prob}.}
 
-To summarize, $\share$ converts a secret $s$ into a two shares. Okay, so how can 
+\new{The next line says to compute $s_2$ as the difference $s-s_1$ \emph{modulo} 
+the number $2^\lambda$. This means that we ``wrap around'' to $2^\lambda-1$ 
+if the difference goes below zero: $-1$ is $2^\lambda-1$ instead, $-2$ is 
+$2^\lambda-2$, and so on.
+For example, if $s=3$ and $s_1=5$, $s-s_1 = 3-5 = -2$. With $\lambda=10$,
+we instead ``wrap around'' to $2^\lambda-2=1024-2=1022$. This modulo operation has 
+important implications for privacy, as we'll talk about soon.}
+
+\new{We're almost done working through the \share~algorithm. The next and final 
+line says to return (output) a pair of numbers: the random number $s_1$ and 
+the difference $s_2$.}
+
+So $\share$ converts a secret $s$ into a two shares. Okay, so how can 
 two people, each with one of the shares, get back the original secret? That's
 what the right side of Figure~\ref{fig:additiveSS} tells us. The reconstruction 
 algorithm $\rec$ takes two integers (call them $s_1$ and $s_2$) and returns their 
-sum. That's it!
+sum,
+\new{again modulo $2^\lambda$. The ``wrapping'' goes both ways, which in this case 
+means that if the sum is greater than $2^\lambda-1$, we wrap back around to 
+0: $2^\lambda$ becomes 0, $2^\lambda+1$ becomes 1, and so on.}
 
+\begin{example}
+    \color{blue}
+    Let $\lambda=10$. We'll work through an execution of the \share~and
+    \rec~algorithms with $s=4$ to get more comfortable with the modulus 
+    operation.
+
+    First, say we sampled $s_1=10$. Then $s_2 = 4-10 = -6$, which modulo 
+    $2^\lambda$ becomes $2^\lambda-6$. Since $\lambda=10$, $s_2=1024-6=1018$.
+    So \share~returns $(10,1018)$.
+
+    Now let's plug these shares into the reconstruction algorithm: 
+    $\rec(10,1018)$ returns $10+1018 \mod 2^\lambda = 1028 \mod 2^\lambda 
+    = 1028-1024 = 4$. That's exactly the original secret.
+\end{example}
+
+\new{For values of $s$ in $\{0,\ldots,2^\lambda-1\}$,}
 If $\rec$ receives two shares that were produced by the $\share$ algorithm, 
-it will return $s_1 + (s-s_1) = s$. This means the scheme has correctness!
+it will return $s_1 + (s-s_1) \new{\mod 2^\lambda} = s$. This means the scheme 
+has correctness! \new{If $s$ is not in that set, though, we run into some 
+problems: since the modulus operation will always reduce to a number 
+in the range $\{0, \ldots, 2^\lambda-1\}$, \rec~will always output a number 
+in that range. This means that if $s$ is not one of these numbers, 
+\rec~will not output it, violating correctness. We'll have to limit ourselves 
+to sharing only numbers in that set, which just means we need to pick 
+$\lambda$ in a way that will include all the numbers we expect to share.}
+
 What about privacy? 
 
-\todo{for values $s$ in $\{1, \ldots, 2^\lambda\}$. Let's define the subtraction 
-as wrapping around (if $s_1 > s$, $s-s_1 = 2^\lambda - (s_1-s)$), i.e. 
-work modulo $2^\lambda$.}
+% \todo{for values $s$ in $\{1, \ldots, 2^\lambda\}$. Let's define the subtraction 
+% as wrapping around (if $s_1 > s$, $s-s_1 = 2^\lambda - (s_1-s)$), i.e. 
+% work modulo $2^\lambda$.}
 It turns out the scheme is private as well: someone who sees only one of the two 
 shares learns nothing about the secret. This is pretty straightforward if the 
 one share you see is $s_1$: we picked this value randomly (remember this means 
 we picked it independently of $s$), so it has nothing to do with $s$. This 
-is the case with the share $s-s_1$ as well. If we're given a number $s_2$ 
-calculated as $s-s_1$, we don't know the other share $s_1$, so $s_2$ could 
-be anything: $s-0$, $s-1$, $s-2$, and so on. Another way to think about this 
+is the case with the other share as well. If we're given a number $s_2$ 
+calculated as $s-s_1 \new{\pmod{2^\lambda}}$, we don't know the other share 
+$s_1$. \new{With $s$ and $s_1$ both in $\{0, \ldots, 2^\lambda-1\}$, $s_2$ will 
+range anywhere from 0 to $2^\lambda-1$. Each of these values of $s_2$ could 
+have occurred for any value of $s$. For instance, if $s_2=0$, it could be 
+that $s=0$ and $s_1=0$; or maybe $s=1$ and $s_1=1$; and so on, as long as 
+$s=s_1$ (but $s_1$ is unknown!).}
+Another way to think about this 
 is that we don't know $s_1$, so we can't undo the subtraction and recover $s$.
 In this case we say that $s_1$ ``masks'' $s$.
+
+% \new{What happens for values of $s > 2^\lambda-1$? If $s=2\cdot 2^\lambda-1$,
+% then no matter the choice of $s_1$, $s_2 > 2^\lambda-1$ and $s_2 < 2\cdot2^\lambda$:}
+
+% \begin{align*}
+%     \color{blue}
+%     (2\cdot2^\lambda-1)-s_1 &\geq (2\cdot2^\lambda-1)-(2^\lambda-1)\\
+%         &= 2^\lambda\\
+%     (2\cdot2^\lambda-1)-s_1 &\leq (2\cdot2^\lambda-1)-0\\
+%         &= 2\cdot2^\lambda-1
+% \end{align*}
 
 These arguments for correctness and privacy are not very rigorous. We'll 
 take a look at how cryptographers prove these properties in Sections~\ref{sec:formal-defs} 
@@ -84,14 +144,14 @@ and \ref{sec:proof}.
 \end{exercise}
 
 \begin{exercise}
-    What is
+    \new{Again using $\lambda=10$,} what is
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}%[label={(\arabic*)}] %\usepackage{enumitem}
         \item $\rec(2, 6)$?
         \item $\rec(4, 1)$?
         \item $\rec(10, 2)$?
-        \item $\rec(115, -103)$?
-        \item $\rec(559, -544)$?
+        \item $\rec(115, 921)$?
+        \item $\rec(559, 480)$?
     \end{enumerate}
 \end{exercise}
 
@@ -320,27 +380,32 @@ wishes and get into the safe herself to steal Alice's money.
 Let's think about the worst case, in which Eve is very powerful: she knows 
 that the safe is locked with equal probability by one of two combinations
 $x_0$ or $x_1$; even worse, she was able to choose $x_0$ and $x_1$ by 
-somehow influencing Alice as she chose her combination; and she can control
-where in the list of friends she is so that she can pick whether she gets
-share number 1, 2, \ldots, $n-1$, or $n$. Once Alice has shared her
-combination among her friends, Eve will see the share $s_i$ (for her choice
-of $i$), which is the result of either $\share(x_0)$ or $\share(x_1)$.
+somehow influencing Alice as she chose her combination; and \new{she's even 
+even managed to figure out how to peek at some of the other friends' shares
+(at most $n-1$, including herself).}
+% control
+% where in the list of friends she is so that she can pick whether she gets
+% share number 1, 2, \ldots, $n-1$, or $n$. 
+Once Alice has shared her
+combination among her friends, Eve will see \new{at most $n-1$ shares (her
+choice which ones) which are all the result of either $\share(x_0)$ or $\share(x_1)$.}
 
 What sort of protection does Alice need? Even with all the information 
-known to Eve (her knowledge of $x_0, x_1, i$, and $s_i$), we don't want her to figure
+known to Eve (her knowledge of $x_0, x_1, i$, \new{$n-1$ shares}), we don't want her to figure
 out whether she got a share of $x_0$ or $x_1$, because if she did, she'd
 be able to unlock the safe!
 
 Here is the formal privacy game for any secret sharing scheme $\ss =
 (\share,\allowbreak \rec)$. (You can think of $\A$ as Eve.)
 \begin{enumerate}
-    \item The adversary \A~picks two values $x_0, x_1$ and a number $i$ 
-    between 1 and $n$.
-    \item The game flips a coin to randomly choose one of those two values.
+    \item The adversary \A~picks two values $x_0, x_1$ and a \new{set $I$ 
+    of size at most $n-1$ of} numbers between 1 and $n$.
+    \item The game flips a coin to randomly choose one of the two values 
+    $x_0,x_1$ to share.
     This is usually written as picking a random value $b$ from the set 
     $\{0, 1\}$.
     \item Now the game runs the \share~algorithm on this randomly chosen 
-    value $x_b$ to get shares $s_1, \ldots, s_m$. It gives the $i$th share
+    value $x_b$ to get shares $s_1, \ldots, s_m$. It gives \new{$s_i$ for all $i \in I$}
     to \A.
     \item \A~tries to guess which of the two values $x_0, x_1$ were shared.
     More specifically, it outputs a guess $b' \in \{0, 1\}$. 
@@ -356,16 +421,17 @@ the comments, which are there to explain the notation):
 \begin{figure}[h!]
 \begin{center}\fbox{%
 \pseudocode[syntaxhighlight=auto,head=SS-priv$_{\A,\ss}$]{% (t,n)
-    (x_0, x_1, i) \leftarrow \A
+    (x_0, x_1, I) \leftarrow \A
     ~\pccomment{get input values from $\A$} \\
     b \sample \bin 
     ~\pccomment{decide randomly which value to share} \\
     s_1, \ldots, s_m \gets \share(x_b) 
     ~\pccomment{share the chosen value} \\
-    b' \gets \A(s_i) 
-    ~\pccomment{$\A$ uses the $i$th share to guess $b'$} \\
+    b' \gets \A(\{s_i\}_{i \in I})
+    ~\pccomment{$\A$ uses the shares indicated by $I$ \normalfont{to} 
+    guess $b'$} \\
     return b=b' 
-    ~\pccomment{return 1 if $b=b'$ and 0 otherwise}
+    ~\pccomment{\normalfont{return} 1 \normalfont{if} $b=b'$ and 0 otherwise}
 }
 }\end{center}
 \caption{The secret sharing privacy game.}
@@ -563,7 +629,9 @@ scheme as an example.
 \begin{proof}
     Let $x_0$ and $x_1$ be any two integers. Define $s_{0,i}$ as
     the $i$th share output by $\share(x_0)$ and $s_{1,i}$ as the 
-    $i$th share output by $\share(x_1)$.
+    $i$th share output by $\share(x_1)$. \new{Since $n=2$ for this scheme, 
+    the set $I$ chosen by $\A$ will be of size 1; call the only number 
+    in that set $i$.}
 
     If $i=1$, then $s_{0,1}$ and $s_{1,1}$ are distributed uniformly 
     at random by the definition of \share~(the first share is 
@@ -574,7 +642,8 @@ scheme as an example.
         \Pr[b=b' \mid i=1] = \frac{1}{2}.
     \]
 
-    If $i=2$, then $s_{0,2} = s-s_{0,1}$ and $s_{1,2} = s-s_{1,1}$.
+    If $i=2$, then $s_{0,2} = s-s_{0,1} \new{\mod 2^\lambda}$ and $s_{1,2} = 
+    s-s_{1,1} \new{\mod 2^\lambda}$.
     But as we said before, $s_{0,1}$ and $s_{1,1}$ are uniform,
     which implies that $s_{0,2}$ and $s_{1,2}$ are also uniform.
     Therefore they are perfectly indistinguishable, and 
