final version (remove text colors)

--- a/packet/src/probability.tex
+++ b/packet/src/probability.tex
@@ -505,7 +505,7 @@ For example, if $d_1 \in \{1,2,3,4,5,6\}$ is the random variable
 representing the outcome of rolling a 6-sided die, the probability 
 distribution of $d_1$ is}
 \begin{align*}
-    \color{blue}
+    % \color{blue}
     \left\{
         \frac{1}{6},\frac{1}{6},\frac{1}{6},
         \frac{1}{6},\frac{1}{6},\frac{1}{6}
@@ -521,7 +521,7 @@ is 2, and so on.
 Then the probability distribution over this random variable (call it 
 $d_2$) is over the sample space $\{1,2,3,4,5,6\}$, with values }
 \begin{align*}
-    \color{blue}
+    % \color{blue}
     \left\{
         \frac{1}{6},\frac{1}{6},\frac{1}{6},
         \frac{1}{6},\frac{1}{6},\frac{1}{6}
