--- a/packet/src/secretsharing.tex
+++ b/packet/src/secretsharing.tex
@@ -40,8 +40,8 @@ Here is a simple scheme for sharing integers using nothing but addition and subt
 \label{fig:additiveSS}
 \end{figure}
 
-\todo{In a future iteration, maybe introduce the na\"ive scheme (without 
-modulus) and point out the issues to slowly adjust the scheme.}
+% \todo{In a future iteration, maybe introduce the na\"ive scheme (without 
+% modulus) and point out the issues to slowly adjust the scheme.}
 
 Let's go through the notation together. First, on the left, we see that 
 the $\share$ algorithm is being defined. (An \emph{algorithm} is simply a procedure.)
@@ -76,7 +76,7 @@ means that if the sum is greater than $2^\lambda-1$, we wrap back around to
 0: $2^\lambda$ becomes 0, $2^\lambda+1$ becomes 1, and so on.}
 
 \begin{example}
-    \color{blue}
+    % \color{blue}
     Let $\lambda=10$. We'll work through an execution of the \share~and
     \rec~algorithms with $s=4$ to get more comfortable with the modulus 
     operation.
