--- a/packet/src/shamir.tex
+++ b/packet/src/shamir.tex
@@ -321,7 +321,7 @@ when $x = x_2$ in our example, or more generally, when $x=x_i$. In fact,
 in these cases, the expression always evaluates to 1.}
 
 \begin{align*}
-    \color{blue}
+    % \color{blue}
     \ell_i(x_j) = \begin{cases}
         0 & \text{if $i \neq j$}\\
         1 & \text{if $i=j$}
